--- a/assets/CSS/Style.css
+++ b/assets/CSS/Style.css
@@ -25,7 +25,7 @@ nav ul {
 
 nav ul li {
     text-transform: uppercase;
-    font-size: 23px;
+    font-size: 20px;
     font-weight: bold;
     color: #CCCCCC;
 }
@@ -90,15 +90,55 @@ h1 {
 
 #right {
     width: 20%;
-    border: 1px solid #CCCCCC;
-    border-radius: 3px;
     margin-left: 20px;
     margin-right: 20px;
 }
 
-#right ul {
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    text-transform: uppercase;
-}
+    #right ul {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        text-transform: uppercase;
+        margin: 0;
+        padding: 0;
+        border: 1px solid #CCCCCC;
+        border-radius: 3px;
+    }
+
+    #right ul li{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 15px;
+        height: 15px;
+    }
+
+    #right ul li h5 {
+        margin: 0;
+        padding: 0;
+    }
+
+    #right .desconto {
+        color: #FF7800;
+    }
+
+    #right .total {
+        margin-top: 20px;
+        font-weight: bold;
+    }
+
+    #right button {
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25), inset 0px -3px 0px #D45A00;
+        width: 100%;
+        height: 67px;
+        margin-top: 15px;
+        background-color: #FF6C00;
+        border: none;
+        
+        color: #FFFFFF;
+        font-size: 15px;
+        text-transform: uppercase;
+        font-weight: bold;
+        border-radius: 3px;
+
+    }
